# automatic_sign_language_recognition_system

./: .gitignore  all_labels.txt  pyproject.toml  requirements.txt  tmp.py
ai/: embedding.py  llm.py  settings.py  stt.py  tts.py
ai/actions/: action.py  ask_review.py  user_requirement.py  write_plan.py
ai/base/: base_agent.py  base_context.py  base_env.py  base_role.py  base_serializer.py
ai/environment/: nb_workspace.py
ai/prompts/: prompt_template_manager.py
ai/schema/: code.py  context.py  context_mixin.py  (+4 more)
configs/: config.example.yaml  config.py  embedding_config.py  es_mapping.json  llm_config.py  models_config.py  oauth_config.py  stt_config.py  tts_config.py  workspace_config.py
desktop/: __init__.py  camera_capture.py  desktop_app.py
docker/: .dockerignore  .env.example  README.md
figures/: dataset_statistics.json  frame_distribution_stats.json  train_analysis_summary.json  train_split_frame_stats.json  video_anomaly_report.json
notebooks/: Task_CV_Final.ipynb  baseline.ipynb  serving_colab.ipynb  solution.ipynb  solution_weighted_loss.ipynb
provider/: __init__.py  constants.py  embedding_provider_registry.py  llm_provider_registry.py  tts_provider_registry.py
scripts/: analyze_frame_distribution.py  analyze_train_split.py  analyze_video_dataset.py  detect_video_anomaly.py  sentence_mining.py
svr/: apps_server.py  slr_inference.py
ui/: api_client.py  app.py  config.py  loader.py  requirements.txt  slr_controller.py
utils/: common.py  constants.py  cost_manager.py  exceptions.py  logs.py  patterns.py  sp_slr.py  token_counter.py
(+51 files in other folders)
