[project]
name = "INT6146_10"
version = "0.0.1"
description = "Automatic Sign Language Recognition System"
dependencies = [
    "fastapi==0.115.12",
    "gradio>=4.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "requests",
    "aiofiles",
    "chardet",
    "tenacity",
    "openai",
    "anthropic",
    "tiktoken",
    "aiohttp",
    "beautifulsoup4",
    "nbformat",
    "nbclient",
    "rich",
    "starlette",
    "loguru",
    "diffusers",
]

[project.optional-dependencies]
ui = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai", "api", "ui", "svr", "utils", "provider", "configs"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt"]
